--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,7 @@ google-resumable-media @ file:///tmp/build/80754af9/google-resumable-media_16243
 googleapis-common-protos @ file:///C:/ci/googleapis-common-protos-feedstock_1617957814607/work
 greenlet @ file:///C:/ci/greenlet_1628888275363/work
 grpcio @ file:///C:/ci/grpcio_1637590978642/work
+gunicorn==20.1.0
 h5py @ file:///C:/ci/h5py_1637120894255/work
 HeapDict @ file:///Users/ktietz/demo/mc3/conda-bld/heapdict_1630598515714/work
 holoviews @ file:///opt/conda/conda-bld/holoviews_1645454331194/work
